feat(#3): add connection validation to UserSqliteRepository, add javadoc documentation in interface and implementation